# phonetic-distance

./: .gitignore  README.md  pyproject.toml  requirements.txt  wd.py  weighted_distance.py
data/: dictionary.txt
examples/: usage.py
phonetic_distance/: __init__.py  core.py
phonetic_distance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: ANALISI_TEMPI_README.md  analyze_computation_times.py  computation_times_summary.txt  plot_timing_analysis.py  run_analysis.py  update_dictionary.py
tests/: conftest.py  test_similarity.py
