[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonetic-distance"
version = "0.1.0"
description = "Calcolo della distanza fonetica"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Filippo Vicidomini" } ]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/filippovicidomini/phonetic-distance"

[tool.setuptools.packages.find]
where = ["."]
include = ["phonetic_distance*"]
